# elpi-js

./: .babelrc  .gitignore  .npmignore  Makefile  README.md  bsconfig.json  demo.bc.js  doc.md  elpi-api.js  elpi-js.opam  elpi-worker.bc.js  elpijs.opam  index.html  package.json
.github/workflows/: build.yml
assets/: index.ac8da227.js  vendor.c9c62fb2.js
bindings/: elpiJs.re
demo/: api.js  demo.js  elpi-api.js  elpi.js  index.html  package.json  vite.config.js
demo/js/: main.bc.js
demo/lib/elpi-js/: dune-package  opam
demo/share/elpi-js/: elpi-worker.bc.js
docs/: demo.js  elpi-worker.js  index.html
lib/: api.js  elpi-api.js  elpi-worker.js  elpi-worker.jsbak  elpi.js  elpiJs.bc.js  main.js
src/: builtins.ml  data.ml  dune  elpiAPI.ml  elpiJs.ml  elpiWorker.ml  elpiWorkerBindings.ml  elpiWorkerBindings.mli  elpiWrapper.ml  jbuild  log.ml  main.ml  pack_data.py  query.ml  stringTools.ml  toJs.ml  workerBindings.ml  workerBindings.mli
src/data/: elpi-checker.elpi  elpi_quoted_syntax.elpi  lp-syntax.elpi
src/js/: elpi-api.js  elpi-worker.js
