(executable
 (modes js)
 (name main)
 (libraries js_of_ocaml js_of_ocaml-ppx elpi base64)
 (js_of_ocaml
  (flags :standard +dynlink.js +toplevel.js))
 (preprocess
  (pps js_of_ocaml-ppx))
 (link_flags -linkall))

(install
 (section share)
 (files 
  (main.bc.js as elpi-worker.bc.js)
   js/elpi-api.js))
