(executable
 (modes js)
 (name main)
 (libraries js_of_ocaml-ppx elpi base64)
 (js_of_ocaml
  (flags :standard +dynlink.js +toplevel.js))
 (preprocess
  (pps js_of_ocaml-ppx))
 (link_flags -linkall))

(rule
 (alias pack_data)
 (deps (source_tree data) pack_data.py)
 ;(targets data.ml)
 (action (with-stdout-to "data.ml" (run python pack_data.py))))

(install
 (section share)
 (files
  (main.bc.js as elpi-worker.bc.js)
  js/elpi-api.js))
